Update with git LFS for large nc files

--- a/SI-practical-02.ipynb
+++ b/SI-practical-02.ipynb
@@ -17,7 +17,7 @@
    "id": "ddb9a4fb",
    "metadata": {},
    "source": [
-    "# Climate model simulations from CMIP5\n",
+    "# Sea ice in Climate model simulations from CMIP5\n",
     " The Model Intercomparison Projects (MIP) are standard sets of concerted experiments in which different modelling groups produce  simulations of the climate system that are compared with each others and assessed against available observational data sets. The Climate Model Intercomparison Project (CMIP) was promoted by the World Climate Research Program (WCRP) to support the Intergovernmental Panel on Climate Change (IPCC) during the assessment reports (AR) and provide numerical projections of future global climate under various scenarios. It is now in phase 6 (CMIP6). CMIP1 and 2 were voluntary and not much coordinated. CMIP3 was the firs organized and concerted phase. The successive phase was renamed CMIP5 to synchronize the number with the cycle of the IPCC assessment reports. \n",
     "They are composed of a minimum set of simulations (tiers): \n",
     "* A control simulation, in which the climate model are forced with pre-industrial conditions (a constant atmospheric CO2 and other greenhouse gases). These simulations are very long (> 500 years), to produce the baseline climate. They are essential to estimate climate variability for detection and attribution studies.\n",
@@ -34,7 +34,7 @@
     "\n",
     "There are millions of data available, and the majority of climate studies makes use of a large number of different simulations, to include as many information as possible to constrain the uncertainties linked to assessing future conditions. We will only analyse a few model outputs that have already been pre-processed. If you download raw data from ESGF you will have to run a few steps to get them ready for analysis. Different climate models (or Earth System Model, ESM, in case they include a carbon and other biogeochemical components) are identified by an institute name and by a model name. One institute can have different models, for instance with different horizontal resolutions or different components. \n",
     "\n",
-    "4 models have been provided, with climatological data for the historical period 1979-2005, which coincides with the satellite data we analysed previously. **The models are global, have different spatial resolutions, and often _irregular grids_.** \n",
+    "There are several sea-ice variables produced by climate model. Sea-ice concentration data from 4 models have been provided, with climatological data for the historical period 1979-2005, which coincides with the satellite data we analysed previously. **The models are global, have different spatial resolutions, and often _irregular grids_.** \n",
     "* CMCC (Centro EuroMediterraneo per i Cambiamenti Climatici, Italy): CMCC-CM **[irregular, low-res]**\n",
     "* NOAA-GFDL (National Oceanic and Atmospheric Administration - Geophysical Fluid Dynamics Lab, USA): GFDL-CM3 **[regular, mid-res]**\n",
     "* CCCMA (Canadian Centre for Climate Modelling and Analysis, Canada) CanESM **[regular, coarse-res]**\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef179893",
+   "id": "638a8c05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc213dde",
+   "id": "8df10bd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b3f48b7",
+   "id": "d129a27a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68b7d6a7",
+   "id": "2cb0af9c",
    "metadata": {},
    "source": [
     ">What is going on here?\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6494ba71",
+   "id": "f991f5d3",
    "metadata": {},
    "source": [
     "## Workaround for irregular data\n",
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf2146e5",
+   "id": "24afd23f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "851ea36a",
+   "id": "49d8fd4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c02636b6",
+   "id": "fb781c82",
    "metadata": {},
    "source": [
     "The next step is to regrid your data as if they were a set of disconnected triplets (x,y,value) that needs to be mapped onto a regular grid using a triangulation method function called `griddata`\n",
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "150610b4",
+   "id": "ddfde127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a25c1ec",
+   "id": "e6259b31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68cbf988",
+   "id": "01e7b5de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3b38d6b",
+   "id": "44cc49f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95656ed5",
+   "id": "4e9b91a3",
    "metadata": {},
    "source": [
     "## Sea-Ice Extent from CMIP5 models\n",
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65c7a395",
+   "id": "4cd73d7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e82569a8",
+   "id": "a2a59993",
    "metadata": {},
    "source": [
     "We also need to load the are of the ocean cell, which is different for each grid and made available by every modelling group. They are found in the folder `CMIP5/area`"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e4598be",
+   "id": "55674b43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be51722a",
+   "id": "55613196",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1072142b",
+   "id": "afccef49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13def156",
+   "id": "a9887283",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8411683e",
+   "id": "61908e3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10b46d9f",
+   "id": "c315adf3",
    "metadata": {},
    "source": [
     "We can put these instructions in a loop to compare all the models with each other"
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10970bf6",
+   "id": "3a7d8ab0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58f4ed76",
+   "id": "c1764d5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "129e8a65",
+   "id": "e2caf433",
    "metadata": {},
    "source": [
     "We see that the selected models are quite good at representing the SIE seasonal cycle. The asymmetric growth rate is better captured by the GFDL model, which is however the one showing the most poleward extent."
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f50fbb7",
+   "id": "fda2d3b0",
    "metadata": {},
    "outputs": [],
    "source": []
