Add figure on multi-dim arrays

--- a/SI-practical-01.ipynb
+++ b/SI-practical-01.ipynb
@@ -8,9 +8,9 @@
     "# Contents\n",
     "This tutorial is dedicated to the analysis of sea-ice concetration data from space. In the following you will learn how to:\n",
     "* _compute climatologies from NetCDF data_\n",
-    "* _visualize maps of sea-ice concetration_\n",
-    "* _compute the sea-ice extent and display its seasonal cycle_\n",
-    "* _select sub-regions and compare their sea-ice extent seasonal cycles_"
+    "* _visualize maps of sea-ice concentration_\n",
+    "* _compute sea-ice extent and display its seasonal cycle_\n",
+    "* _select geographical regions and compare their sea-ice extent seasonal cycles_"
    ]
   },
   {
@@ -41,7 +41,12 @@
    "source": [
     "## How to process NetCDF data (theory)\n",
     "\n",
-    "Gridded data in Earth Sciences are distributed using the [NetCDF format](https://www.unidata.ucar.edu/software/netcdf/). Most of the scientific visualization softwares implement dedicated libraries to load and work with this format. [xarray](http://xarray.pydata.org/en/stable/) is the python library that we will use in this tutorial.\n",
+    "Gridded data in Earth Sciences are multi-dimensional arrays\n",
+    "\n",
+    "![multi-dimensional arrays](http://xarray.pydata.org/en/stable/_images/dataset-diagram.png)\n",
+    "[(more about it here)](https://geohackweek.github.io/nDarrays/01-introduction/)\n",
+    "\n",
+    "that required specialized \"data containers\". Gridded data are distributed using the [NetCDF format](https://www.unidata.ucar.edu/software/netcdf/). Most of the scientific visualization software implement dedicated libraries to load and work with this format. [xarray](http://xarray.pydata.org/en/stable/) is the python library that we will use in this tutorial.\n",
     "However, performing multiple batch operations such concatenation and averaging is a lenghty process that is better suited for dedicated software. [cdo](https://code.mpimet.mpg.de/projects/cdo) and [nco](https://code.mpimet.mpg.de/projects/cdo) are two of these tools. They are better suited for the linux environment, but can also be run from mac OS and windows.\n",
     "\n",
     "To learn more about `cdo`, follow the [cdo Tutorial](https://code.mpimet.mpg.de/projects/cdo/wiki/Tutorial).\n",
@@ -196,7 +201,7 @@
    "outputs": [],
    "source": [
     "field = ds.Sea_Ice_Concentration_with_Final_Version\n",
-    "field"
+    "print(field)"
    ]
   },
   {
@@ -250,9 +255,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ba1efbed",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_crs = ccrs.PlateCarree()\n",
@@ -505,7 +508,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
